Fix horizontal overflow issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,6 +26,10 @@
     @apply transition-colors !important;
   }
 
+  body {
+    overflow-x: hidden;
+  }
+
   hr {
     @apply border-border;
   }
